infra/sprint-1.2-kubernetes-platform/kube-001-production-cluster/manifests/cilium-network-policy-dns.yaml
# CiliumNetworkPolicy: allow DNS (kube-dns / CoreDNS) for pods in namespace.
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-dns
  namespace: citycouncil-apps
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
